tls/new-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kwikkoder-ingress
  namespace: kwikkoder
  annotations:
    # kubernetes.io/ingress.class: nginx
    # acme.cert-manager.io/http01-edit-in-place: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    # nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # kubernetes.io/tls-acme: 'true'  
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTP"

    # nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    # nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  tls:
    - hosts:
      - kwikkoder.com
      secretName: app-web-cert
  rules:
  - host: kwikkoder.com
    http:
      paths:
        - path: /?(.*)
          pathType: Prefix
          backend:
            serviceName: website
            servicePort: 4200            

        - path: /lb/?(.*)
          pathType: Prefix
          backend: 
            serviceName: leaderboard-api              
            servicePort: 5001

        - path: /competition/?(.*)
          pathType: Prefix
          backend: 
            serviceName: competition-api
            servicePort: 5001
        
        - path: /discussion/?(.*)
          pathType: Prefix
          backend: 
            serviceName: discussion-api
            servicePort: 5001

        - path: /typetest/?(.*)
          pathType: Prefix
          backend:
            serviceName: tests-api
            servicePort: 5001
        
        - path: /chat-api/?(.*)
          pathType: Prefix
          backend:
            serviceName: chat-api
            servicePort: 3000
